--- a/views/invoices/create.ejs
+++ b/views/invoices/create.ejs
@@ -174,7 +174,13 @@
 			</nav>
 		</div>
 		<!-- Sidebar -->
-		<%- include('../partials/sidebar') %>
+		<!-- Sidebar -->
+        <% if (user && user.role === 'accountant') { %>
+            <%- include('../partials/accountant-sidebar') %>
+        <% } else { %>
+            <%- include('../partials/sidebar') %>
+        <% } %>
+		<!-- End Sidebar -->
 		<!-- End Sidebar -->
 
       <div class="main-panel">
