--- a/views/invoices/details.ejs
+++ b/views/invoices/details.ejs
@@ -233,7 +233,13 @@
 			</nav>
 		</div>
 		<!-- Sidebar -->
-		<%- include('../partials/sidebar') %>
+		<!-- Sidebar -->
+        <% if (user && user.role === 'accountant') { %>
+            <%- include('../partials/accountant-sidebar') %>
+        <% } else { %>
+            <%- include('../partials/sidebar') %>
+        <% } %>
+		<!-- End Sidebar -->
 		<!-- End Sidebar -->
       <div class="main-panel">
         <div class="content">
