--- a/views/transaction-details.ejs
+++ b/views/transaction-details.ejs
@@ -80,7 +80,13 @@
 		</div>
 		
 		<!-- Sidebar -->
-		<%- include('partials/sidebar') %>
+        <!-- Sidebar -->
+        <% if (user && user.role === 'accountant') { %>
+            <%- include('partials/accountant-sidebar') %>
+        <% } else { %>
+            <%- include('partials/sidebar') %>
+        <% } %>
+        <!-- End Sidebar -->
 		<!-- End Sidebar -->
 		
 		<div class="main-panel">
